Adding html forms

--- a/assignment.html
+++ b/assignment.html
@@ -16,7 +16,56 @@
         <div ng-repeat="model in models">
           {{ model }}
         </div>
-      </div>
+        <div id="cars">
+          <div class="form-group">
+            <label for="">Make</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="">Model</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="">Location</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="">Color</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="">License Number</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="">State</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="">Mileage</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="">Vin</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+        <div id="representatives">
+          <div class="form-group">
+            <label for="">First Name</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="">Last Name</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="">Phone Number</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </div>      </div>
     </div>
 
     <script type="application/javascript">
