--- a/kuwork/kuwork-template.html
+++ b/kuwork/kuwork-template.html
@@ -47,11 +47,17 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<ul class="nav nav-pills nav-justified">
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#reservations"><a href="#">Reservations</a></li>
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#cars"><a href="#">Cars</a></li>
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#representatives"><a href="#">Customers</a></li>
+</ul>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#results">
-  Launch demo modal
-</button>
+<ul class="nav nav-pills nav-justified">
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#representatives"><a href="#"> Representatives</a></li>
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#maintenance"><a href="#"> Maintenance Costs</a></li>
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#corporations"><a href="#"> Corporations</a></li>
+</ul>
 
 <!-- Search Modal -->
 <div class="modal fade" id="results" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -84,12 +90,12 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="cars" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Cars</h4>
       </div>
       <div class="modal-body">
         ...
@@ -103,12 +109,12 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="representatives" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Representatives</h4>
       </div>
       <div class="modal-body">
         ...
@@ -122,12 +128,12 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="customers" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Customers</h4>
       </div>
       <div class="modal-body">
         ...
@@ -141,12 +147,50 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="reservations" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Reservations</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="maintenance" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Maintenance Costs</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="corporation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Corporations</h4>
       </div>
       <div class="modal-body">
         ...
