--- a/rental/rep_add.html
+++ b/rental/rep_add.html
@@ -1,27 +1,27 @@
 <html>
 <head>
-	<title>Add Data</title>
+	<title>Add Representative</title>
 </head>
 
 <body>
-	<a href="index.php">Home</a>
+	<a href="rep_index.php">Representative Home</a>
 	<br/><br/>
 
-	<form action="add.php" method="post" name="form1">
-		<table width="25%" border="0">
-			<tr> 
-				<td>Name</td>
-				<td><input type="text" name="name"></td>
+	<form action="rep_add.php" method="post" name="form1">
+		<table>
+			<tr>
+				<td>First Name</td>
+				<td><input type="text" name="first_name"></td>
 			</tr>
-			<tr> 
-				<td>Age</td>
-				<td><input type="text" name="age"></td>
+			<tr>
+				<td>Last Name</td>
+				<td><input type="text" name="last_name"></td>
 			</tr>
-			<tr> 
-				<td>Email</td>
-				<td><input type="text" name="email"></td>
+			<tr>
+				<td>Phone Number</td>
+				<td><input type="text" name="phone_number"></td>
 			</tr>
-			<tr> 
+			<tr>
 				<td></td>
 				<td><input type="submit" name="Submit" value="Add"></td>
 			</tr>
@@ -29,4 +29,3 @@
 	</form>
 </body>
 </html>
-
